Fix mixcloud element layout issues

--- a/app/styles/components/s-mixcloud.scss
+++ b/app/styles/components/s-mixcloud.scss
@@ -1,4 +1,6 @@
 s-mixcloud {
+  display: block;
+
   @media screen and (min-width: 420px) {
     display: flex;
     justify-content: flex-start;
